@@ -330,6 +330,8 @@
         <alttexturefocus colordiffuse="$VAR[HighlightColor]">common/white.png</alttexturefocus>
     </include>
     <variable name="Defs_Hub_Widget">
+        <value condition="!IsEmpty(Container(9501).ListItem.Property(widgetPath))">$INFO[Container(9501).ListItem.Property(widgetPath)]</value>
+        <value condition="!IsEmpty(Container(9501).ListItem.Property(hubImage))">$INFO[Container(9501).ListItem.Property(hubImage)]</value>
         <value condition="Window.IsVisible(1101) + !IsEmpty(Skin.String(Widget.1101))">$INFO[Skin.String(Widget.1101)]</value>
         <value condition="Window.IsVisible(1102) + !IsEmpty(Skin.String(Widget.1102))">$INFO[Skin.String(Widget.1102)]</value>
         <value condition="Window.IsVisible(1103) + !IsEmpty(Skin.String(Widget.1103))">$INFO[Skin.String(Widget.1103)]</value>
@@ -386,5 +388,13 @@
         <value condition="StringCompare(Skin.String(home.fallbackwidget),Weather) + !IsEmpty(Skin.String(weather.fanart.path))">$INFO[Skin.String(weather.fanart.path)]$INFO[Window(Weather).Property(Current.FanartCode)]/</value>
         <value condition="!IsEmpty(Skin.String(home.fallbackwidget))">$INFO[Skin.String(home.fallbackwidget)]</value>
         <value>special://skin/extras/playlists/RandomMovies.xsp</value>
+    </variable>
+    <variable name="Defs_Widget_Label">
+        <value condition="StringCompare(Window.Property(groupname),mainmenu)">Widget</value>
+        <value condition="SubString(Window.Property(groupname),x11,Left)">$LOCALIZE[31097]</value>    
+    </variable>
+    <variable name="Defs_Widget_Label2">
+        <value condition="StringCompare(Window.Property(groupname),mainmenu)">$VAR[Label_ShortcutsWidget]</value>
+        <value condition="SubString(Window.Property(groupname),x11,Left)">$INFO[Container(211).ListItem.Property(widgetName)]</value>
     </variable>
 </includes>
