@@ -33,8 +33,8 @@
     <variable name="ClearLogoTop">
         <value condition="!IsEmpty(ListItem.Art(clearlogo))">$INFO[ListItem.Art(clearlogo)]</value>
         <value condition="!IsEmpty(ListItem.Art(tvshow.clearlogo))">$INFO[ListItem.Art(tvshow.clearlogo)]</value>
-        <value condition="!IsEmpty(Container(9500).ListItem.Art(clearlogo)) + Skin.HasSetting(furniture.showhublogo)">$INFO[Container(9500).ListItem.Art(clearlogo)]</value>
-        <value condition="!IsEmpty(Container(9500).ListItem.Art(tvshow.clearlogo)) + Skin.HasSetting(furniture.showhublogo)">$INFO[Container(9500).ListItem.Art(tvshow.clearlogo)]</value>
+        <value condition="!IsEmpty(Container(9500).ListItem.Art(clearlogo)) + Skin.HasSetting(furniture.showhublogo) + !Control.IsVisible(9499)">$INFO[Container(9500).ListItem.Art(clearlogo)]</value>
+        <value condition="!IsEmpty(Container(9500).ListItem.Art(tvshow.clearlogo)) + Skin.HasSetting(furniture.showhublogo) + !Control.IsVisible(9499)">$INFO[Container(9500).ListItem.Art(tvshow.clearlogo)]</value>
         <value condition="!IsEmpty(Container(9001).ListItem.Art(clearlogo))">$INFO[Container(9001).ListItem.Art(clearlogo)]</value>
         <value condition="!IsEmpty(Container(9001).ListItem.Art(tvshow.clearlogo))">$INFO[Container(9001).ListItem.Art(tvshow.clearlogo)]</value>
         <value condition="substring(Container.FolderPath,video.youtube)">logos/Youtube_logo.png</value>
