@@ -16,9 +16,7 @@
                 <param name="label" value="$INFO[Control.GetLabel(500)]" />
                 <param name="icon" value="special://skin/extras/icons/settings.png" />
             </include>
-
-            
-            
+  
             <control type="list" id="211">
                 <right>side</right>
                 <left>side</left>
@@ -141,10 +139,10 @@
 
                 <control type="button" id="312" description="Widget">
                     <width>100%</width>
-                    <label>Widget</label>
-                    <label2>$VAR[Label_ShortcutsWidget]</label2>
+                    <label>$VAR[Defs_Widget_Label]</label>
+                    <label2>$VAR[Defs_Widget_Label2]</label2>
                     <include>Defs_OptionButton</include>
-                    <visible>stringcompare(Window.Property(groupname),mainmenu)</visible>
+                    <visible>stringcompare(Window.Property(groupname),mainmenu) | SubString(Window.Property(groupname),x11,Left)</visible>
                 </control>
 
                 <control type="button" id="9702" description="PosterWidget">
@@ -159,6 +157,7 @@
                     <onclick condition="!StringCompare(Container(211).ListItem.Property(PosterWidget),$LOCALIZE[31155]) + !StringCompare(Container(211).ListItem.Property(PosterWidget),$LOCALIZE[31154]) + !StringCompare(Container(211).ListItem.Property(PosterWidget),$LOCALIZE[31153])">SetProperty(customValue,$LOCALIZE[31155])</onclick>                    
                     <onclick>SendClick(404)</onclick>                  
                     <include>Defs_OptionButton</include>
+                    <visible>StringCompare(Window.Property(groupname),mainmenu)</visible>
                     <visible>StringCompare(Skin.String(home.widgetposters),$LOCALIZE[31166])</visible>
                 </control>
 
@@ -257,6 +256,14 @@
                     <label>31074</label>
                     <visible>stringcompare(Window.Property(groupname),mainmenu)</visible>
                     <include>Defs_OptionButton</include>
+                </control>
+                
+                <control type="button" id="9704" description="Hub Image">
+                    <width>100%</width>
+                    <label>31737</label>
+                    <label2>$INFO[Container(211).ListItem.Property(hubImage)]</label2>
+                    <include>Defs_OptionButton</include>
+                    <visible>SubString(Window.Property(groupname),x11,Left)</visible>
                 </control>
 
                 <control type="button" id="310" description="Background">
